랜덤 명언 UI & 랜덤 명언 기능

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./src/js/login.js" defer></script>
     <script src="./src/js/todoList.js" defer></script>
     <script src="./src/js/time.js" defer></script>
+    <script src="./src/js/quotes.js" defer></script>
   </head>
   <body>
     <div class="main-wrapper">
@@ -143,7 +144,7 @@
 
           <div class="quotes-wrapper">
             <div class="window">
-              <div class="window-title">의미있는 한 조각</div>
+              <div class="window-title">삶의 의미있는 한 조각</div>
               <div class="window-options">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -188,6 +189,16 @@
                   />
                 </svg>
               </div>
+            </div>
+            <div class="quotes-contents">
+              <h1 class="quotes-eng">
+                In order to succeed, we must first believe that we can.
+              </h1>
+              <h1 class="quotes-kr">
+                성공하기 위해서, 우리는 먼저 우리 자신이 할 수 있다는 것을
+                믿어야 한다.
+              </h1>
+              <p class="quotes-author">- Nikos -</p>
             </div>
           </div>
         </div>
