깃 허브 페이지 테스트

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/src/css/main.css" />
+    <link rel="stylesheet" href="/main.css" />
     <script src="./src/js/login.js" defer></script>
     <script src="./src/js/todoList.js" defer></script>
     <script src="./src/js/time.js" defer></script>
@@ -321,9 +321,7 @@
                   <div class="dice-result">
                     <div class="side"></div>
                   </div>
-                  <div class="luck-msg">
-                    오늘의 운세는 1입니다. 밤에 뒤를 조심하세요. 😱
-                  </div>
+                  <div class="luck-msg"></div>
                 </div>
               </div>
             </div>
