마지막 터치

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vanilla JS Codeing Challenge</title>
     <link rel="stylesheet" href="./src/css/main.css" />
     <script src="./src/js/login.js" defer></script>
     <script src="./src/js/todoList.js" defer></script>
@@ -309,6 +309,7 @@
                 </div>
               </div>
               <div class="luck-contents">
+                <div class="luck-desc">주사위를 클릭해 보세요!</div>
                 <div class="dice">
                   <div class="side one"></div>
                   <div class="side two"></div>
